--- a/Source/Habitasorte.csproj
+++ b/Source/Habitasorte.csproj
@@ -50,6 +50,10 @@
       <HintPath>packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.9.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>packages\iTextSharp.5.5.9\lib\itextsharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -93,6 +97,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Business\CsvWriter.cs" />
+    <Compile Include="Business\Pdf\CustomPdfPageEventHelper.cs" />
     <Compile Include="Business\Database.cs" />
     <Compile Include="Business\Model\CandidatoGrupo.cs" />
     <Compile Include="Business\Model\ConfiguracaoPublicacao.cs" />
@@ -103,6 +108,7 @@
     <Compile Include="Business\Model\Publicacao\SorteioPub.cs" />
     <Compile Include="Business\Model\Sorteio.cs" />
     <Compile Include="Business\Model\Status.cs" />
+    <Compile Include="Business\Pdf\PdfWriter.cs" />
     <Compile Include="Business\SorteioService.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
