--- a/Source/packages.config
+++ b/Source/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ErikEJ.SqlCeBulkCopy" version="2.1.6.15" targetFramework="net452" />
   <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.9" targetFramework="net452" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
