Importação de arquivos ".csv". Melhor exibição de erros de importação.

--- a/Source/Habitasorte.csproj
+++ b/Source/Habitasorte.csproj
@@ -38,6 +38,10 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ErikEJ.SqlCe40, Version=2.1.6.14, Culture=neutral, PublicKeyToken=03b0b5a60fec3719, processorArchitecture=MSIL">
       <HintPath>packages\ErikEJ.SqlCeBulkCopy.2.1.6.15\lib\net40\ErikEJ.SqlCe40.dll</HintPath>
       <Private>True</Private>
@@ -96,6 +100,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Business\AbstractDataReader.cs" />
+    <Compile Include="Business\CsvDataReader.cs" />
     <Compile Include="Business\CsvWriter.cs" />
     <Compile Include="Business\Model\Empreendimento.cs" />
     <Compile Include="Business\Pdf\CustomPdfPageEventHelper.cs" />
