--- a/Source/packages.config
+++ b/Source/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net452" />
   <package id="ErikEJ.SqlCeBulkCopy" version="2.1.6.15" targetFramework="net452" />
   <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net452" />
   <package id="iTextSharp" version="5.5.9" targetFramework="net452" />
